@@ -192,7 +192,7 @@ JOPTION_ANY_CATEGORY="Any Category"
 JOPTION_ORDER_FIRST="Order First"
 JOPTION_ORDER_LAST="Order Last"
 JOPTION_ACCESS_SHOW_ALL_GROUPS="Show All Groups"
-JOPTION_ACCESS_SHOW_ALL_SECTIONS="Show All Sections"
+JOPTION_ACCESS_SHOW_ALL_ACCESS="Show All Access Level"
 JOPTION_USE_DEFAULT="Use Default"
 
 USERS_MAIL="Mass Mail"
