@@ -165,7 +165,7 @@ JOPTION_ANY_CATEGORY="Any Category"
 JOPTION_ORDER_FIRST="Order First"
 JOPTION_ORDER_LAST="Order Last"
 JOPTION_ACCESS_SHOW_ALL_GROUPS="Show All Groups"
-JOPTION_ACCESS_SHOW_ALL_SECTIONS="Show All Sections"
+JOPTION_ACCESS_SHOW_ALL_ACCESS="Show All Access Level"
 JOPTION_USE_DEFAULT="Use Default"
 JOPTION_USE_MENU_REQUEST_SETTING="- Use Menu or Request Setting -"
 JOPTION_FROM_DEFAULT_TEMPLATE="From Default Template"
